--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Stijndus/Discord-Bot#readme",
   "dependencies": {
+    "discord-xp": "^1.1.16",
     "discord.js": "^12.5.3",
     "fs": "0.0.1-security",
     "mongoose": "^5.11.14"
